test/reductions/vass/reduceLoopOfPromoted-nondomain.good
reduceLoopOfPromoted-nondomain.chpl:7: error: unsupported elements of the expression being reduced -- they are iterable expressions without a domain shape
